remove storing of seasons from API
